testsuite/tests/typecheck/should_fail/T20666a.stderr

T20666a.hs:11:10: error: [GHC-39999]
    • Could not deduce ‘Eq (F [a])’
        arising from the superclasses of an instance declaration
      from the context: D [a]
        bound by the instance declaration at T20666a.hs:11:10-23
      Possible fix:
        If the constraint looks soluble from a superclass of the instance context,
        read 'Undecidable instances and loopy superclasses' in the user manual
    • In the instance declaration for ‘C [a]’
